feat: modernize video player and tighten vertical video grid

--- a/content/templates/content/partials/video_shorts_section.html
+++ b/content/templates/content/partials/video_shorts_section.html
@@ -48,7 +48,8 @@
                      data-embed-url="{{ video.get_embed_url }}"
                      data-platform-url="{{ video.video_url }}"
                      data-video-url="{{ video.get_cdn_source }}"
-                     data-mime-type="{{ video.get_cdn_mime }}">
+                     data-mime-type="{{ video.get_cdn_mime }}"
+                     data-aspect-ratio="9:16">
                     <div class="video-short-thumbnail">
                         <img src="{{ video.get_thumbnail_url }}"
                              alt="{{ video.title }}"
