--- a/content/templates/content/partials/video_shorts_section.html
+++ b/content/templates/content/partials/video_shorts_section.html
@@ -76,7 +76,7 @@
 </div>
 
 <div class="modal fade" id="shortVideoModal" tabindex="-1" aria-labelledby="shortVideoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-dialog modal-dialog-centered short-video-modal">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="shortVideoModalLabel">Vídeo</h5>
@@ -84,7 +84,7 @@
             </div>
             <div class="modal-body p-0">
                 <div class="video-modal-placeholder">
-                    <div class="ratio ratio-9x16 video-modal-wrapper">
+                    <div class="ratio ratio-9x16 video-modal-wrapper" data-active-aspect="9:16">
                         <div class="video-modal-loader">
                             <div class="spinner-border text-economist-red" role="status">
                                 <span class="visually-hidden">Carregando...</span>
