Adjust article video embeds to keep original aspect

--- a/content/templates/content/article_page.html
+++ b/content/templates/content/article_page.html
@@ -105,7 +105,7 @@
                                 </div>
                             {% elif block.block_type == 'video' %}
                                 <div class="content-block video-block">
-                                    <div class="ratio ratio-16x9">
+                                    <div class="article-video-embed">
                                         {{ block.value }}
                                     </div>
                                 </div>
@@ -239,7 +239,7 @@
                             </div>
                         {% elif block.block_type == 'video' %}
                             <div class="content-block video-block">
-                                <div class="ratio ratio-16x9">
+                                <div class="article-video-embed">
                                     {{ block.value }}
                                 </div>
                             </div>
