--- a/content/templates/content/topic_listing_page.html
+++ b/content/templates/content/topic_listing_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags navigation_tags %}
 
 {% block title %}{{ page.title }}{% endblock %}
 
@@ -17,7 +17,7 @@
             <div class="col-md-3">
                 {% if article.featured_image %}
                     <a href="{% pageurl article %}">
-                        {% image article.featured_image fill-300x200 class="img-fluid rounded" %}
+                        {% image article.featured_image fill-300x200 class="img-fluid rounded" loading="lazy" decoding="async" %}
                     </a>
                 {% endif %}
             </div>
@@ -26,9 +26,11 @@
                     <a href="{% pageurl article %}" class="text-decoration-none">{{ article.title }}</a>
                 </h5>
                 <p class="text-muted small mb-1">
-                    Publicado há {{ article.publication_date|timesince }}
+                    Publicado há {{ article.publication_date|timesince_brasilia }}
                 </p>
-                <p class="mb-0">{{ article.introduction }}</p>
+                {% if article.introduction %}
+                    <p class="mb-0">{{ article.introduction|richtext|striptags|truncatewords:32 }}</p>
+                {% endif %}
             </div>
         </div>
     {% endfor %}
